<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg_new"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/name_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="@dimen/login_input_username_top"
        android:background="@drawable/btn_base_input" >

        <ImageView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/name_icon" />

        <TextView
            android:id="@+id/name_base_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:paddingLeft="5dp"
            android:text="@string/login_name"
            android:textColor="#4eb9e7"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="8dp"
            android:background="@null"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/support_name"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColorHint="@color/edit_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/code_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_base_input" >

        <ImageView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/code_icon" />

        <TextView
            android:id="@+id/code_base_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:paddingLeft="5dp"
            android:text="@string/login_code"
            android:textColor="#4eb9e7"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_code"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="8dp"
            android:background="@null"
            android:drawableRight="@drawable/input_icon"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:hint="@string/input_code"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/edit_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="@dimen/login_button_marginRight"
            android:layout_weight="1"
            android:background="@drawable/btn_base_register"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18sp" >
        </Button>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_button_marginLeft"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:background="@drawable/btn_base_login"
            android:onClick="handleLogin"
            android:text="@string/zhuoyou_login"
            android:textColor="@android:color/white"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/forget_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:text="@string/forget_code"
            android:textColor="#7b8792"
            android:textSize="15sp" >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_show_other_msg"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:text="@string/other_login_title"
            android:textColor="#4eb9e7"
            android:textSize="@dimen/login_show_other_msg_size" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <!--
        <com.yyapk.login.custom.MyButton
            android:id="@+id/login_btn_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="@dimen/login_button_marginRight"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@drawable/btn_base_other_login"
            android:text="@string/title_activity_main"
            android:textColor="#888888"
            android:textSize="16sp" >
        </com.yyapk.login.custom.MyButton>
        -->

        <Button
            android:id="@+id/login_btn_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_base_other_login"
            android:drawableLeft="@drawable/qq_icon"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:layout_marginLeft="23dp"
            android:layout_weight="1"
            android:text="@string/qq_account_login"
            android:textColor="#888888"
            android:textSize="@dimen/qq_sina_login_font_size" >
        </Button>
        <!--
        <com.yyapk.login.custom.MyButton
            android:id="@+id/login_btn_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_button_marginLeft"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:background="@drawable/btn_base_other_login"
            android:text="@string/title_activity_main_sina"
            android:textColor="#888888"
            android:textSize="16sp" >
        </com.yyapk.login.custom.MyButton>
        -->

        <Button
            android:id="@+id/login_btn_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_base_other_login"
            android:drawableLeft="@drawable/sina_icon"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
           android:layout_marginLeft="@dimen/login_button_marginLeft"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:text="@string/title_activity_main_sina"
            android:textColor="#888888"
            android:textSize="@dimen/qq_sina_login_font_size" >
        </Button>
    </LinearLayout>

</LinearLayout>